--- a/package.json
+++ b/package.json
@@ -15,14 +15,15 @@
     "test": "jest"
   },
   "jest": {
-    "snapshotSerializers": ["enzyme-to-json/serializer"]
+    "snapshotSerializers": [
+      "enzyme-to-json/serializer"
+    ]
   },
   "dependencies": {
     "@babel/cli": "^7.0.0",
     "@babel/core": "^7.2.2",
     "@babel/preset-env": "^7.2.3",
     "@babel/preset-react": "^7.0.0",
-    "Faker": "^0.7.2",
     "axios": "^0.18.0",
     "babel-loader": "^8.0.0-beta.6",
     "body-parser": "^1.18.3",
